--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -78,7 +78,6 @@
    "source": [
     "#train_texts= pd.read_csv('dataset/train.csv')\n",
     "\n",
-    "# Initialize stemmer or lemmatizer\n",
     "stemmer = PorterStemmer()\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "\n",
@@ -89,7 +88,26 @@
     "    # Remove extra spaces\n",
     "    text = re.sub(r'\\s+', ' ', text).strip()\n",
     "    \n",
-    "   \n",
+    "    # Normalize to lowercase\n",
+    "    text = text.lower()\n",
+    "    \n",
+    "    # Tokenization\n",
+    "    words = nltk.word_tokenize(text)\n",
+    "    \n",
+    "    # Stemming or Lemmatization\n",
+    "    if use_stemming:\n",
+    "        words = [stemmer.stem(word) for word in words]\n",
+    "    else:\n",
+    "        words = [lemmatizer.lemmatize(word) for word in words]\n",
+    "    \n",
+    "    # Join words back into a single string\n",
+    "    return ' '.join(words)\n",
+    "\n",
+    "# Apply preprocessing to the 'text' column\n",
+    "train_texts['processed_text'] = train_texts['text'].apply(preprocess_text)\n",
+    "\n",
+    "# Display the original and processed text\n",
+    "print(train_texts[['text', 'processed_text']])\n",
     "\n",
     "\n"
    ]
